--- a/jeopardy-game/css/style.css
+++ b/jeopardy-game/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: ivory;
+    /* margin: auto; */
 }
 
 .game-board {
@@ -9,6 +10,7 @@ body {
     width: 824px;
     height: 488px;
     justify-content: space-evenly;
+    margin: auto;
 }
 
 .category {
@@ -19,21 +21,34 @@ body {
     text-align: center;
 }
 
-.category-header {
+.category-box {
     width: 128px;
     height: 72px;
-    /* max-height: 128px; */
-    /* max-width: 72px; */
     background-color: #060CE9;
+}
+
+.category-header {
+    /* width: 128px; */
+    /* height: 72px; */
     color: white;
     font-weight: bold;
+    text-shadow: 2px 2px 1px black;
+    padding: 20px 10px 20px 10px;
 }
 
 .category-answer {
     width: 128px;
     height: 72px;
     background-color: #060CE9;
-    color: gold;
+    color: #FFCC00;
     font-size: 30pt;
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+    text-shadow: 4px 4px 2px black;
+}
+
+.category-answer:first-letter {
+    font-size:90%;
+    /* vertical-align: baseline; */
 }
 
