--- a/jeopardy-game/css/style.css
+++ b/jeopardy-game/css/style.css
@@ -5,6 +5,7 @@ body {
 
 h1 {
     text-align: center;
+    font-size: 32pt;
 }
 
 h1::first-letter {
@@ -75,12 +76,11 @@ h3 {
 }
 
 .category-header {
-    /* width: 128px; */
-    /* height: 72px; */
     color: white;
     font-weight: bold;
     text-shadow: 2px 2px 1px black;
     padding: 20px 10px 20px 10px;
+    /* letter-spacing: -1px; use this to play with bringing the letters closer togetherr */
 }
 
 .category-answer-box {
