--- a/jeopardy-game/css/style.css
+++ b/jeopardy-game/css/style.css
@@ -108,7 +108,11 @@ h3 {
 }
 
 .modal-box {
-    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    background-color: ivory;
 	position: absolute;
 	top: 10%;
 	height: auto; /* 500px for pre-styled answer choices */
@@ -118,11 +122,13 @@ h3 {
     border-radius: 10px;
     box-shadow: 0px 0px 15px black;
     text-align: center;
-    padding: 0px 0px 10px 0px;
+    /* padding: 0px 0px 10px 0px; */
+    padding: 5px 0px;
 }
 
 .modal-box h2 {
     text-align: center;
+    margin: 15px 30px;
 }
 
 .modal-answer {
