--- a/jeopardy-game/css/style.css
+++ b/jeopardy-game/css/style.css
@@ -115,7 +115,7 @@ h3 {
     justify-content:center;
     background-color: ivory;
 	position: absolute;
-	top: 10%;
+	top: 5%;
 	height: auto; /* 500px for pre-styled answer choices */
 	width: auto; /* 600px for pre-styled answer choices */
 	z-index: 1;
@@ -185,7 +185,31 @@ h3 {
     text-shadow: 2px 2px 1px black;
 }
 
+.modal-solution-box {
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    width: 384px;
+    height: 45px;
+    background-color: darkgray;
+    border: 4px solid green;
+    margin: 0px 30px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 4px black;
+}
 
+.modal-solution-text {
+    text-align: center;
+    color: white;
+    padding: 20px;
+    font-size: 20px;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 1px black;
+}
+
+.button {
+    margin:20px 0px 10px 0px;
+}
 
 
 
